--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -100,6 +100,22 @@ li::marker {
   }
 }
 
+/* Pages */
+
+.page-cover-image {
+  aspect-ratio: 16/8;
+  width: 100%;
+  display: inline;
+  z-index: 999;
+}
+
+.module-overview-image {
+  aspect-ratio: 12/2.7;
+  width: 90%;
+  display: inline;
+  z-index: 999;
+}
+
 /*
 ———————————————————————
 TimeLine CSS
